Added livereloading and fleshed out styles

--- a/stylesheets/sass/_base.scss
+++ b/stylesheets/sass/_base.scss
@@ -1,6 +1,21 @@
-/* _base.scss */
+// Reset
+@import '../components/normalize-scss/_normalize';
 
-* {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+// Colours
+$foreground: #333;
+$background: #fff;
+$highlight: #f0f;
+
+// Fonts
+$sans-serif: helvetica, arial, sans-serif;
+$serif: serif;
+
+// Media queries
+$mq-responsive: true;
+$mq-breakpoints: (
+  (mobile   300px)
+  (tablet   600px)
+  (desktop  900px)
+);
+
+@import '../components/sass-mq/_mq';
